# google-cdn-image-optimization

./: .gitignore  LICENSE  README.md  changelog.md
infra/: .terraform.lock.hcl  bootstrap.sh  imageopt_svc.tf  variables.tf
infra_mcdn/: .gitignore  bootstrap.sh  imageopt_mcdn.tf  provider.tf  variables.tf
src/: Dockerfile  index.js  media_cdn.md  package-lock.json  package.json
src/media_cdn_wasm/: Cargo.toml
src/media_cdn_wasm/src/: lib.rs  regex.yaml
